--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
     <meta name="description" content="Brasenose College Carbon Offset Voucher Scheme">
-    <meta name="author" content="AlliedOffsets Luke Martin">
+    <meta name="author" content="AlliedOffsets">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Brasenose College Carbon Offset Voucher Scheme</title>
     <!-- favicons for all devices -->
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/icons/android-icon-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
